This commit expalins the method which  i will follow to most effectively use Twiiter REST Search API. Following issues shall be addressed.     to avoid getting duplicate results?
Signed-off-by: krisalpha <choprakrishan61@gmail.com>

--- a/StockScoobySentiment/StockScoobySentiment.ipynb
+++ b/StockScoobySentiment/StockScoobySentiment.ipynb
@@ -67,7 +67,7 @@
    },
    "outputs": [],
    "source": [
-    "public_tweets = api.search('Trump')"
+    "public_tweets = api.search('')"
    ]
   },
   {
