--- a/StockScoobySentiment/StockScoobySentiment.ipynb
+++ b/StockScoobySentiment/StockScoobySentiment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -61,62 +61,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "public_tweets = api.search('')"
+    "public_tweets = api.search('demonetization')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "@bocavista2016 @CNNPolitics Trump had to beat the System am win in a landslide . He did\n",
-      "0.8\n",
-      "RT @robbysoave: There has been no wave of pro-Trump violence against minorities. Do not buy into hoax reporting https://t.co/DsBxaqpBO4 via…\n",
+      "The ugly face of India's demonetization: Dozens of deaths https://t.co/Btno3BYpUq https://t.co/lXaS3parAk\n",
+      "-0.7\n",
+      "RT @FISME: PM @NarendraModi had sought 50 days time from public to get the situation smoother: @KalrajMishra on #DeMonetization https://t.c…\n",
       "0.0\n",
-      "RT @ken_sugar: 「9年半後のことを教えてやろう」\n",
-      "「なんだと？」\n",
-      "「今そこでレッスルマニア23が開催されているな」\n",
-      "「おう」\n",
-      "「そこでビンス・マクマホンにラリアット喰らわしてる男。そいつが9年半後のアメリカ大統領だ」\n",
-      "「お前は何を言っているんだ」\n",
-      "#トランプ #T…\n",
+      "RT @Anil_Tulsiram: Please take out a minute and sign this petition showing our support on demonetization...https://t.co/eLatYq0Xjs.. Please…\n",
       "0.0\n",
-      "RT @wikileaks: The nightmares liberals have over Trump are nothing compared to the dictatorships they forced others to live under https://t…\n",
-      "-0.0818181818182\n",
-      "RT @DavidJo52951945: Nigel Farage: Donald Trump 'delayed phone call to Theresa May over insults from Tory ministers' https://t.co/C5k4WYQ91I\n",
+      "Worth reading and sharing, why demonetization won't stop black money accumulation. \n",
+      "\n",
+      "It will demobilize the stock... https://t.co/rVwrZxZ5e1\n",
+      "0.0666666666667\n",
+      "RT @Atheist_Krishna: For me it's the greatest move that i have seen in the history of Indian politics, by far hands down ~ Virat Kohli on D…\n",
+      "0.314814814815\n",
+      "The ugly face of India's demonetization: Dozens of deaths https://t.co/Y2FFmbv2en\n",
+      "-0.7\n",
+      "RT @HMOIndiaShadow: BSF jawan's son commits suicide due to lack of notes.\n",
+      "\n",
+      "Read more at: https://t.co/ng6F8RVniz\n",
+      "0.1875\n",
+      "RT @HoeZaay: One of the few articles about demonetization in India, that's objective and devoid of jibes &amp; snark. Worth a read. https://t.c…\n",
+      "-1.38777878078e-17\n",
+      "RT @gauravcsawant: Demonetization is the greatest move in history of Indian politics. Very impressed with purge: Team India skipper @imVkoh…\n",
+      "1.0\n",
+      "RT @MnshaP: BJP's Jagdambika Pal defending #demonetization on @LokSabhaTV. He has serious corruption allegations against him: https://t.co/…\n",
+      "-0.333333333333\n",
+      "RT @rssurjewala: Modiji's #Demonetization. Farmers in acute distress-No buyer for produce &amp; no money for Rabi sowing.Anyone listening? http…\n",
+      "0.6\n",
+      "The ugly face of India's demonetization: Dozens of deaths https://t.co/Dd13JFJjT2\n",
+      "-0.7\n",
+      "RT @gauravcsawant: Demonetization is the greatest move in history of Indian politics. Very impressed with purge: Team India skipper @imVkoh…\n",
+      "1.0\n",
+      "बेट लगा लो #RahulGandhi को #Demonetization का means भी नहि पता होगा..... https://t.co/sQHWe5fexU\n",
       "0.0\n",
-      "RT @JINCHURIKl: when trump says hes gonna build a wall but you have a trick up your sleeve https://t.co/tdvu1qPqUM\n",
-      "0.0\n",
-      "RT @MarlowNYC: President-Elect Donald Trump, last 24 hours: https://t.co/hlxlWvRNuP\n",
-      "0.0\n",
-      "RT @AndreaChalupa: My sister led Trump/Russia research at DNC. US hackers protecting voting systems believe Russia hacked vote tallies http…\n",
-      "0.0\n",
-      "RT @WillyFoReal: A large group of protesters join the ones on the front line facing Portland PD. Maybe 2,500 present now #portland #protest…\n",
-      "0.107142857143\n",
-      "RT @Marvelouspapi: bruh lemme find out Trump just finessed the whole united states https://t.co/BX6p3i234u\n",
-      "0.2\n",
-      "RT @niklasorrenius: Lördagskrönika om Trump, folköl och dammigt halloweengodis. Och om ett så obehagligt skratt att katten reagerade. https…\n",
-      "0.0\n",
-      "This is how to report Trump/Pence death threats on twitter #REPORT  https://t.co/iDGQGQNLM4 https://t.co/IrFPqVkh1z\n",
-      "0.0\n",
-      "RT @hartsigns: @GlennThrush @realDonaldTrump fuck trump, he will ruin the country and he's already taking my medicare FUCK NO!!\n",
-      "-0.5125\n",
-      "We don't have to give Trump a chance stupid Trumpanzee!!  Watching the news.\n",
-      "-1.0\n",
-      "Trump now says 'Crooked Hillary' is 'very strong and very smart' https://t.co/Kgfbr3SwDh via @bi_politics\n",
-      "0.280634920635\n"
+      "RT @friendscongress: Demonetization decision has unleashed economic anarchy. This is only BJP's decision, not NDA's; We were never consulte…\n",
+      "0.1\n"
      ]
     }
    ],
@@ -125,6 +124,17 @@
     "    print (tweet.text)\n",
     "    analysis = TextBlob(tweet.text)\n",
     "    print (analysis.sentiment.polarity)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#TCS SENSEX lang:en since:2014-04-01 until:2014-05-20"
    ]
   }
  ],
